TEST/EXCEPT-tests/debug_empty_str.errout.GOLD
/workspaces/PNut-TS/TEST/EXCEPT-tests/debug_empty_str.spin2:14:error:Empty string
